# mbcheck

./: .gitignore  ARTIFACT.md  Makefile  README.md  dune  dune-project  generate-table.py  mbcheck.opam  mytestfile  run-paper-examples.py
.github/workflows/: default.yml
.history/test/pat-tests/: arith_20231022235447.pat
lib/: dune  mbcheck.ml
lib/common/: common_types.ml  dune  errors.ml  interface.ml  ir.ml  lib_types.ml  pretype.ml  settings.ml  settings.mli  sourceCode.ml  source_code.ml  sugar_ast.ml  type.ml
lib/eval/: checker.ml  common_types.ml  dune  eval_types.ml  generator.ml  generator.mli  help_fun.ml  helper.ml  steps_printer.ml
lib/frontend/: benchmark.ml  desugar_let_annotations.ml  desugar_sugared_guards.ml  dune  insert_pattern_variables.ml  insert_pattern_variables.mli  lexer.mll  parse.ml  parser.mly  pipeline.ml  pipeline.mli  sugar_to_ir.ml  sugar_to_ir.mli
lib/typecheck/: constraint.ml  constraint.mli  constraint_set.ml  dune  gen_constraints.ml  gen_constraints.mli  gripers.ml  interface_env.ml  interface_env.mli  nullable_env.ml  nullable_env.mli  presburger.ml  pretypecheck.ml  pretypecheck.mli  solve_constraints.ml  solver_result.ml  ty_env.ml  ty_env.mli  type_utils.ml  z3_solver.ml
lib/util/: dune  utility.ml
test/: dune  function-tests.py  mklist.py  run-tests.py  tests.json
test/errors/: alias_comm1.pat  alias_comm2.pat  future.lmb  future.pat  list-alias-test.pat  lock.lmb  lock.pat  pat_constr.lmb  pat_constr.pat  pat_constr2.lmb  pat_constr3.lmb  pat_constr4.lmb  simple_alias_comm.pat  uaf1.pat  uaf2.pat  uaf3.pat  uaf_lists.pat  unbound.pat  useafterfree.lmb  weird.lmb  weird2.pat  weird3.lmb
test/examples/: interfaces.pat  pair-ir-shadowing.pat  pair_unr_1.pat  pair_unr_2.pat  pat_constr.lmb  products.pat  robotsn-lists.pat  robotsn.pat  two_factor.pat  two_factor_two.pat
test/examples/de_liguoro_padovani/: account.lmb  account.pat  account_future.lmb  account_future.pat  future.pat  future_state_passing.pat  futurefail.lmb  futurefail.pat  lock.pat  master_worker.lmb  master_worker.pat  sessions.lmb
test/examples/parametrized_interfaces/: 0_basic_recv.pat  (+6 more)
test/generate-tests/: function-call.pat
test/lmb-tests/: linfun-bad-2.lmb  linfun-good.lmb
test/pat-tests/: arith.pat  arith1.pat  arith2.pat  atoms.pat  functions.pat  let-annot-1.pat  let-annot-2.pat  let-annot-3.pat  linfun-bad-1.pat  linfun-bad-3.pat  list-1.pat  list-2.pat  list-broken.pat  list-mb.pat  mb-function-return.pat  n-tuples-2.pat  n-tuples-bad-1.pat  n-tuples-bad-2.pat  n-tuples.pat  receivestar.pat  sum-1.pat  sum-2.pat
vim/ftdetect/: lmb.vim
vim/indent/: lmb.vim
vim/syntax/: lmb.vim
(+33 files in other folders)
