(library (name common)
 (public_name mbcheck.common)
 (libraries util)
 (preprocess ( staged_pps ppx_import visitors.ppx ppx_deriving.show))
 ; w17: Virtual method unimplemented, incompatible with fold visitor
 ; w34: Unused type declarations (visitors)
 (flags (:standard -w -7 -w -17 -w -34))
 ; Don't want to bother with IR just yet
 (modules :standard)
)
