(ocamllex
  (modules lexer))
(menhir
  (modules parser)
  (flags "--table") ;; slower parser, but compilation *much* faster
)
(library (name frontend)
 (public_name mbcheck.frontend)
 (preprocess ( staged_pps ppx_import visitors.ppx ppx_deriving.show))
 (libraries common util typecheck menhirLib)
 (modules :standard)
;(rule
;(targets parser.mli parser.ml)
; (deps   parser.mly)
; (action (ignore-stderr (run menhir --external-tokens Json --explain ${<}))))
)
